fix: cors 설정 변경
Jira: S11P21A701-315